Fix issues from review